--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Websites Hub</title>
+  <title>Nwayitelo's Website Hub</title>
   <link rel="stylesheet" href="website.css" />
 </head>
 <body>
 
 <header>
-  <h1>My Websites Hub</h1>
+  <h1>Nwayitelo's Website Hub</h1>
 </header>
 
 <main>
-  <p>Click on any link below to visit one of my websites:</p>
+  <p>Click on any link below to visit websites created by Nwayitelo:</p>
   <ul id="website-list">
     <!-- Links will be inserted here by JavaScript -->
   </ul>
 </main>
 
 <footer>
-  &copy; 2025 My Website Collection
+  &copy; 2025 Created by Nwayitelo
 </footer>
 
 <script src="website.js"></script>
